Add --write-config
