# coderd/apidoc/swagger.json
@@ -5424,6 +5424,9 @@
         "cache_directory": {
           "$ref": "#/definitions/codersdk.DeploymentConfigField-string"
         },
+        "config_path": {
+          "$ref": "#/definitions/codersdk.DeploymentConfigField-string"
+        },
         "dangerous": {
           "$ref": "#/definitions/codersdk.DangerousConfig"
         },
@@ -5533,6 +5536,9 @@
         },
         "wildcard_access_url": {
           "$ref": "#/definitions/codersdk.DeploymentConfigField-string"
+        },
+        "write_config": {
+          "$ref": "#/definitions/codersdk.DeploymentConfigField-bool"
         }
       }
     },
